--- a/app/src/main/res/layout/activity_slidingmenu.xml
+++ b/app/src/main/res/layout/activity_slidingmenu.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.moduimen.slidingmenu.view.SlidingMenu
+    <com.moduimen.view.SlidingMenu
         android:id="@+id/id_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +15,7 @@
             android:layout_height="match_parent"
             android:orientation="horizontal" >
 
-            <include layout="@layout/left_menu" />
+            <include layout="@layout/include_leftmenu" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -30,6 +30,6 @@
                     />
             </LinearLayout>
         </LinearLayout>
-    </com.moduimen.slidingmenu.view.SlidingMenu>
+    </com.moduimen.view.SlidingMenu>
 
 </RelativeLayout>
